@@ -1,27 +1,26 @@
 ---
-product_name:      manageiq
+product_name: manageiq
 repos:
-  ref:             oparin
+  ref: oparin
   manageiq:
-    url:           https://github.com/ManageIQ/manageiq.git
+    url: https://github.com/ManageIQ/manageiq.git
     ref:
   manageiq_appliance:
-    url:           https://github.com/ManageIQ/manageiq-appliance.git
+    url: https://github.com/ManageIQ/manageiq-appliance.git
     ref:
   manageiq_ui_service:
-    url:           https://github.com/ManageIQ/manageiq-ui-service.git
+    url: https://github.com/ManageIQ/manageiq-ui-service.git
     ref:
 version:
 release:
 rpm:
-  version:         15.0.0
-  release:         0
+  version: 15.1.0
+  release: 1
   repo_name:
-  org_name:        manageiq
+  org_name: manageiq
   product_summary: ManageIQ Management Engine
-  product_url:     https://github.com/ManageIQ/manageiq
+  product_url: https://github.com/ManageIQ/manageiq
   changelog:
-# npm_registry:      https://npm.manageiq.org
 rpm_repository:
   digitalocean_access_token:
   s3_api:
@@ -30,16 +29,16 @@ rpm_repository:
     bucket: rpm-manageiq-org
     endpoint: nyc3.digitaloceanspaces.com
   :arches:
-    - "src"
-    - "noarch"
-    - "ppc64le"
-    - "s390x"
-    - "x86_64"
+  - src
+  - noarch
+  - ppc64le
+  - s390x
+  - x86_64
   :content:
     :15-oparin:
       :targets:
-        - el8
-        - el9
+      - el8
+      - el9
       :rpms:
         :ansible: !ruby/regexp /.+-5\.4.+/
         :kafka: !ruby/regexp /.+-3\.3.+/
@@ -55,7 +54,7 @@ rpm_repository:
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
     :15-oparin-nightly:
       :targets:
-        - el8
-        - el9
+      - el8
+      - el9
       :rpms:
         :manageiq-nightly: !ruby/regexp /.+-15\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
