@@ -1,4 +1,7 @@
 %changelog
+* Thu Dec 22 2022 ManageIQ <contact@manageiq.org> - 15.1.0-1
+- Oparin 1 build
+
 * Mon Feb 14 2022 Jason Frey <fryguy9@gmail.com> - 15.0.0-1
 - Initial build of manageiq-release for Oparin.
 
